trunk/Archive2/76/0ff960675ac7db/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:5:5: error: expected expression
    template<class T>
    ^
main.cpp:8:5: error: unknown type name 'test'
    test x;
    ^
2 errors generated.
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:5:5: error: a template declaration cannot appear at block scope
     template<class T>
     ^
main.cpp:9:12: error: 'x' was not declared in this scope
     (void) x;
            ^
